Updated as per peer-review comments.