@@ -4,7 +4,7 @@
 
 <p align="center">
   <a title="Download ZIP" href="https://github.com/aspose-cells/Aspose.Cells-for-PHP-via-Java/archive/master.zip">
-    <img src="http://i.imgur.com/hwNhrGZ.png" alt="Download Aspose.Cells for PHP via Java Examples, Plugins and Showcases" />
+    <img src="https://raw.githubusercontent.com/AsposeExamples/java-examples-dashboard/master/images/downloadZip-Button-Large.png" alt="Download Aspose.Cells for PHP via Java Examples, Plugins and Showcases" />
   </a>
 </p>
 
@@ -16,13 +16,11 @@
 - Convert any Spreadsheet to PDF with high fidelity.
 - Load and save documents in the tab delimited file format.
 - Easily extract worksheet text by saving in plain text format.
-- many more.
 
 ### Rendering
 
 - Render Excel worksheet pages to raster images & spreadsheet pages to vector images.
 - Specify image resolution, quality, compression and other options.
-- many more.
 
 ### Spreadsheet Content Features
 
@@ -31,19 +29,16 @@
 - Preserve or remove addin, VBA, macros.
 - Add, preserve or extract OLE objects from the spreadsheets.
 - Apply file encryption.
-- many more.
 
 ### Spreadsheet Formatting Features
 
 - Apply formatting (fonts, colors, effects, border etc.) to chracters in the cells.
 - Apply format settings on a worksheet, row, column as well as a range of cells.
-- many more.
 
 ### Page Setup Features
 
 - Configure page orientation, scaling as well as paper size.
 - Specify page margins and page centering.
-- many more.
 
 ## Read & Write Excel Files
 
@@ -57,28 +52,13 @@
 **Fixed Layout:** PDF, XPS\
 **Images:** JPEG, PNG, BMP, SVG, TIFF, GIF, EMF
 
+## System Requirements
+
+Aspose.Cells for PHP via Java is platform independent API and can be used on any platform (Windows, Linux, MacOS etc.) where [PHP](http://www.php.net/downloads.php) 7 or greater versions is installed. The machine must have Oracle JDK 7 or greater versions before setting up the installation.
+
 ## Get Started with Aspose.Cells for PHP via Java
 
-Aspose.Cells for PHP via Java consists of two individual parts, the script wrapper (aspose.cells.php) and Aspose.Cells for Java. These components communicate via PHP/Java Bridge whereas both require separate environments & processes for execution.
-
-### Prerequisites
-
-1. JDK
-2. PHP/Java Bridge
-3. Web Server like Tomcat
-4. PHP
-
-## Installation
-
-1. Install Tomcat on any location such as `\java\apache-tomcat-9.0.24`.
-2. Copy JavaBridge.war to `webapps` folder of Tomcat such as `\java\apache-tomcat-9.0.24\webapps`.
-3. Copy *aspose-cells-xx.x.jar* and *bcprov-jdk15on-xxx.jar* to `lib` folder such as `\java\apache-tomcat-9.0.24\lib`.
-4. Run `\bin\startup.bat`, *JavaBridge.war* will be deployed to `\java\apache-tomcat-9.0.24\webapps\JavaBridge`.
-5. Test [http://localhost:8080/JavaBridge/test.php](http://localhost:8080/JavaBridge/test.php) to ensure that PHP works fine.
-6. Copy *aspose.cells.php* and *example.php* to `\java\apache-tomcat-9.0.24\webapps\JavaBridge`.
-7. Open [http://localhost:8080/JavaBridge/example.php](http://localhost:8080/JavaBridge/example.php) or create your own PHP file as follows.
-
-You will find the Jar and PHP library in the `vendor/aspose/cells` folder.
+Aspose.Cells for PHP via Java consists of two individual parts, the script wrapper (aspose.cells.php) and Aspose.Cells for Java. These components communicate via PHP/Java Bridge whereas both require separate environments & processes for execution. For the detailed instructions please visit [Installation and Usage](https://docs.aspose.com/display/cellsjava/Setup+and+Installation+Guidelines#SetupandInstallationGuidelines-InstallationandUsage) documentation page.
 
 ### Sample Usage
 
@@ -103,46 +83,5 @@ echo "CellsHelper version: ".CellsHelper::getVersion();
 echo "\n";
 ?>
 ```
-
-## Installation on Various Operating Systems
-
-Aspose.Cells for PHP via Java is distributed as a ZIP archive.
-
-To setup environment, install and use Aspose.Cells for PHP via Java, follow the instructions:
-
-### Linux
-
-- Download [PHP](http://www.php.net/downloads.php) source and  install it. Or, use `sudo apt install php-xxx` command to install php binary.
-- Install *Oracle JDK (1.7 or 1.8) for Linux*, configure `JAVA_HOME` environment variable.
-- Download/Get *Aspose.Cells for PHP via Java* API and extract it. There will be a folder named *aspose.cells*.
-- Run `PHP/Java Bridge` in the aforementioned folder with the below command.
-`$JAVA_HOME/bin/java -Djava.ext.dirs=lib -jar JavaBridge.jar SERVLET_LOCAL:8080 >/dev/null 2>&1 &`
-- Run *example.php* in *aspose.cells* folder to run the example with the below command:
-`$ php example.php`
-
-### Windows
-
-- Download [PHP](http://www.php.net/downloads.php) windows binary and add *php.exe* to *PATH*.
-- Install *Oracle JDK (1.7 or 1.8) for Windows* and configure `JAVA_HOME` environment variable.
-- Download *Aspose.Cells for PHP via Java* API and extract it. There will be a folder named *aspose.cells*.
-- Run *PHP/Java Bridge* in the above folder with below command. Select `8080` HTTP listener port when the bridge started and click **OK**.
-`> %JAVA_HOME%/bin/java -Djava.ext.dirs=lib -jar JavaBridge.jar`
-- Run *example.php* in *aspose.cells* folder to run the example with below command:
-`> php example.php`
-
-### Mac
-
-- Install PHP.
-- Install *Oracle JDK (1.7 or 1.8) for Mac*, configure `JAVA_HOME` environment variable.
-- Download *Aspose.Cells for PHP via Java* API and extract it. There will be a folder named *aspose.cells*.
-- Run *PHP/Java Bridge* in the above folder with below command. Select `8080` HTTP listener port when the bridge started and click **OK**.
-`$ $JAVA_HOME/bin/java -Djava.ext.dirs=lib -jar JavaBridge.jar`
-- Run *example.php* in *aspose.cells* folder to run the example with below command:
-`$ php example.php`
-
-## Limitations
-
-- Importing/exporting data from an `Array`, `ArrayList`, `ResultSet` etc. is not supported.
-- Printing is not supported.
 
 [Product Page](https://products.aspose.com/cells/php-java) | [Documentation](https://docs.aspose.com/display/cellsphpjava/Aspose.Cells+for+PHP+via+Java+Home) | [API Reference](https://apireference.aspose.com/php/cells) | [Code Examples](https://github.com/aspose-cells/Aspose.Cells-for-PHP-via-Java) | [Blog](https://blog.aspose.com/category/cells/) | [Free Support](https://forum.aspose.com/c/cells) | [Temporary License](https://purchase.aspose.com/temporary-license)
